--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://quinqu.github.io/portfolio",
+  "homepage": "https://quinqu.github.io/quinqu.github.io",
   "name": "quinqu.github.io",
   "version": "0.1.0",
   "private": true,
